# vanta-font

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
cmake/modules/: FindCheck.cmake
src/: CMakeLists.txt  font.c  font.h
src/opentype/: opentype.c  opentype.h
tests/: CMakeLists.txt  main.c  render_test.c  render_test.cpp  test_font.c  test_font.cpp
