enable_testing()
find_package(Check REQUIRED)
include_directories(${CHECK_INCLUDE_DIRS})
set(LIBS ${LIBS} ${CHECK_LIBRARIES} isti_clib)
include_directories(. ../src)
add_executable(test_font test_font.c)
target_link_libraries(test_font ${LIBS})
add_test(test_font ${CMAKE_CURRENT_BINARY_DIR}/test_font)
